# OpenCV-Computer_vision

./: README.md  main.py  pyproject.toml
