[project]
name = "opencv-computer-vision"
version = "0.1.0"
description = "Project used to train for OpenCV"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
